Fixed h3 letter-spacing

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -608,7 +608,7 @@ main {
                     h3 {
                         font-size: 1.8rem;
                         margin: 5px 0 0;
-                        letter-spacing: -5rem;
+                        letter-spacing: -0.04rem;
                     }
                     p {
                         font-size: 1.1rem;
